k8s/todo-list/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  annotations:
    sidecar.istio.io/inject: 'true'
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: todo-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
  labels:
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: todo-db
    tags.datadoghq.com/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
        - name: db
          image: postgres:11.6-alpine
          volumeMounts:
            - name: secret
              mountPath: '/secrets'
      volumes:
        - name: secret
          secret:
            secretName: todo-db-secret-test
            defaultMode: 0400
            items:
              - key: POSTGRES_PASSWORD
                path: postgres_password
