k8s/todo-list/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web-service
spec:
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: todo-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web-deployment
  labels:
    app: todo-web
    sidecar.istio.io/inject: "true"
    tags.datadoghq.com/env: "dev"
    tags.datadoghq.com/service: "todo-web"
    tags.datadoghq.com/version: "12"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todo-web
        sidecar.istio.io/inject: "true"
        admission.datadoghq.com/enabled: "true"
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/service: "todo-web"
        tags.datadoghq.com/version: "12"
      annotations:
          admission.datadoghq.com/java-lib.version: "latest"
    spec:
      containers:
        - name: web
          image: hancheo/todo-db-fix:arm
          volumeMounts:
            - name: config
              mountPath: '/app/config'
              readOnly: true
            - name: secret
              mountPath: '/app/secrets'
              readOnly: true
          resources: 
            requests: 
              memory: "1Gi" 
              cpu: "1"
            limits: 
              memory: "2Gi" 
              cpu: "1"
      volumes:
        - name: config
          configMap:
            name: todo-web-config-test
            items:
              - key: config.json
                path: config.json
        - name: secret
          secret:
            secretName: todo-web-secret-test
            defaultMode: 0400
            items:
              - key: secrets.json
                path: secrets.json
