k8s/todo-list/web-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: todo-web-gateway
spec:
  selector:
    istio: ingressgateway # use Istio's default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
