k8s/todo-list/web-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: todo-web
spec:
  hosts:
    - '*'
  gateways:
    - todo-web-gateway
  http:
  - route:
      - destination:
          host: todo-web-service.default.cluster.svc.local
          port:
            number: 8081
